--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -208,10 +208,11 @@ jobs:
       export PYTHONPATH=$(MO_ROOT):$(LAYER_TESTS_DIR):$(PYTHONPATH)
       sudo apt-get install python3-setuptools
       python3 -m pip install --upgrade pip
-      python3 -m pip install -r $(LAYER_TESTS_DIR)/requirements.txt -r $(MO_ROOT)/requirements_tf.txt
+      python3 -m pip install -r $(LAYER_TESTS_DIR)/requirements.txt
+      python3 -m pip install -r $(MO_ROOT)/requirements_tf.txt
       env
       python3 -m pytest $(LAYER_TESTS_DIR)/tensorflow_tests/test_tf_Add.py --junitxml=TEST-tf_Add.xml
-    displayName: 'Add Layer Tests'
+    displayName: 'Layer Tests'
     continueOnError: false
 
   - task: PublishTestResults@2
