Change Add layer test ro Roll layer test

--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -211,8 +211,8 @@ jobs:
       python3 -m pip install -r $(LAYER_TESTS_DIR)/requirements.txt
       python3 -m pip install -r $(MO_ROOT)/requirements_tf.txt
       env
-      python3 -m pytest $(LAYER_TESTS_DIR)/tensorflow_tests/test_tf_Add.py --ir_version=10 --junitxml=TEST-tf_Add.xml
-    displayName: 'Layer Tests'
+      python3 -m pytest $(LAYER_TESTS_DIR)/tensorflow_tests/test_tf_Roll.py --ir_version=10 --junitxml=TEST-tf_Roll.xml
+    displayName: 'Roll Layer Test'
     continueOnError: false
 
   - task: PublishTestResults@2
