Removed NGRAPH_PYTHON_BUILD_ENABLE

--- a/inference-engine/ie_bridges/python/CMakeLists.txt
+++ b/inference-engine/ie_bridges/python/CMakeLists.txt
@@ -68,7 +68,7 @@ if(ENABLE_WHEEL)
     add_subdirectory(wheel)
 endif()
 
-if (NGRAPH_PYTHON_BUILD_ENABLE)
+if(TARGET _pyngraph)
     add_dependencies(ie_api _pyngraph)
 endif()
 
