--- a/ngraph/frontend/tensorflow/CMakeLists.txt
+++ b/ngraph/frontend/tensorflow/CMakeLists.txt
@@ -1,32 +1,14 @@
-# ******************************************************************************
-# Copyright 2017-2021 Intel Corporation
+# Copyright (C) 2018-2021 Intel Corporation
+# SPDX-License-Identifier: Apache-2.0
 #
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-# ******************************************************************************
 
-file(GLOB_RECURSE LIBRARY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cc)
-file(GLOB_RECURSE LIBRARY_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
+set(TARGET_NAME "tensorflow_ngraph_frontend")
+
+file(GLOB_RECURSE LIBRARY_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
+file(GLOB_RECURSE LIBRARY_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/src/*.hpp)
 file(GLOB_RECURSE LIBRARY_PUBLIC_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/include/*.hpp)
 
-message("slyalin: 1")
-
-find_package(Protobuf REQUIRED IMPORTED)
-include_directories(${Protobuf_INCLUDE_DIRS})
-
-message("slyalin: 2")
-
-set(TENSORFLOW_FRONTEND_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
-set(TENSORFLOW_FRONTEND_INSTALL_INCLUDE "${NGRAPH_INSTALL_INCLUDE}/ngraph/frontend/tensorflow")
+set(${TARGET_NAME}_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
 # Create named folders for the sources within the .vcproj
 # Empty name lists them directly under the .vcproj
@@ -35,47 +17,88 @@ source_group("src" FILES ${LIBRARY_SRC})
 source_group("include" FILES ${LIBRARY_HEADERS})
 source_group("public include" FILES ${LIBRARY_PUBLIC_HEADERS})
 
-set(PROTOBUF_GENERATE_CPP_APPEND_PATH ON)
+set(PROTO_SRCS)
+set(PROTO_HDRS)
+
+# Generate protobuf file on build time for each '.proto' file in src/proto
 file(GLOB proto_files ${CMAKE_CURRENT_SOURCE_DIR}/src/proto/*.proto)
-protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS ${proto_files})
 
-include_directories(${Protobuf_INCLUDE_DIRS})
+if(CMAKE_CROSSCOMPILING)
+    set(PDPD_PROTOC_EXECUTABLE ${SYSTEM_PROTOC})
+else()
+    set(PDPD_PROTOC_EXECUTABLE $<TARGET_FILE:protoc>)
+endif()
 
-message("Tensorflow proto: " ${PROTO_HDRS})
+message("PDPD_PROTOC_EXECUTABLE is [${PDPD_PROTOC_EXECUTABLE}]")
+
+foreach(INFILE ${proto_files})
+    get_filename_component(FILE_DIR ${INFILE} DIRECTORY)
+    get_filename_component(FILE_WE ${INFILE} NAME_WE)
+    set(OUTPUT_PB_SRC ${CMAKE_CURRENT_BINARY_DIR}/${FILE_WE}.pb.cc)
+    set(OUTPUT_PB_HEADER ${CMAKE_CURRENT_BINARY_DIR}/${FILE_WE}.pb.h)
+    set(GENERATED_PROTO ${INFILE})
+    add_custom_command(
+            OUTPUT "${OUTPUT_PB_SRC}" "${OUTPUT_PB_HEADER}"
+            COMMAND ${PDPD_PROTOC_EXECUTABLE} ARGS --cpp_out ${CMAKE_CURRENT_BINARY_DIR} -I ${FILE_DIR} ${FILE_WE}.proto
+            DEPENDS ${PDPD_PROTOC_EXECUTABLE} ${GENERATED_PROTO}
+            COMMENT "Running C++ protocol buffer compiler (${PDPD_PROTOC_EXECUTABLE}) on ${GENERATED_PROTO}"
+            VERBATIM)
+    list(APPEND PROTO_SRCS "${OUTPUT_PB_SRC}")
+    list(APPEND PROTO_HDRS "${OUTPUT_PB_HEADER}")
+endforeach()
+
+add_custom_target(${TARGET_NAME}_proto DEPENDS ${PROTO_SRCS} ${PROTO_HDRS})
+
+set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS} PROPERTIES GENERATED TRUE)
+
+# Disable all warnings for generated code
+set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS} PROPERTIES COMPILE_OPTIONS -w)
 
 # Create shared library
-add_library(tensorflow_frontend SHARED  ${LIBRARY_SRC} ${LIBRARY_HEADERS} ${LIBRARY_PUBLIC_HEADERS} ${PROTO_SRCS} ${PROTO_HDRS})
-add_library(ngraph::tensorflow_frontend ALIAS tensorflow_frontend)
+add_library(${TARGET_NAME} SHARED  ${LIBRARY_SRC} ${LIBRARY_HEADERS} ${LIBRARY_PUBLIC_HEADERS} ${PROTO_SRCS} ${PROTO_HDRS})
 
-target_include_directories(tensorflow_frontend PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/../generic/include ${CMAKE_CURRENT_BINARY_DIR})
+add_dependencies(${TARGET_NAME} libprotobuf tensorflow_ngraph_frontend_proto)
+
+if(NOT WIN32)
+    # Addition dependency on static libprotobuf for non-Windows
+    add_dependencies(${TARGET_NAME} libprotobuf_static)
+endif()
+
+target_include_directories(${TARGET_NAME}
+        PUBLIC
+        $<BUILD_INTERFACE:${${TARGET_NAME}_INCLUDE_DIR}>
+        $<INSTALL_INTERFACE:${FRONTEND_INSTALL_INCLUDE}>
+        PRIVATE
+        ${Protobuf_INCLUDE_DIRS}
+        ${CMAKE_CURRENT_SOURCE_DIR}/src
+        ${CMAKE_CURRENT_BINARY_DIR})
 
 if(COMMAND ie_add_vs_version_file)
-    ie_add_vs_version_file(NAME tensorflow_frontend
-                           FILEDESCRIPTION "FrontEnd to load and convert Tensorflow file format")
+    ie_add_vs_version_file(NAME ${TARGET_NAME}
+            FILEDESCRIPTION "FrontEnd to load and convert PaddlePaddle file format")
 endif()
 
-target_link_libraries(tensorflow_frontend PRIVATE ${Protobuf_LIBRARIES} PUBLIC ngraph)
-
-# TODO: Consider to remove the following block (inherited from onnx_import just in case).
-if (CMAKE_CXX_COMPILER_ID MATCHES "^(Apple)?Clang$")
-    target_compile_options(tensorflow_frontend PRIVATE -Wno-undef -Wno-reserved-id-macro -Wno-switch-enum
-            -Wno-invalid-offsetof -Wno-shorten-64-to-32 -Wno-unused-macros -Wno-missing-variable-declarations
-            -Wno-unused-private-field -Wno-shadow -Wno-deprecated PUBLIC -Wno-undefined-func-template)
+if(WIN32)
+    target_link_libraries(${TARGET_NAME} PRIVATE libprotobuf)
+else()
+    target_link_libraries(${TARGET_NAME} PRIVATE ${PROTOBUF_STATIC_LIB_OUTPUT})
 endif()
 
-install(TARGETS tensorflow_frontend EXPORT ngraphTargets
+target_link_libraries(${TARGET_NAME} PUBLIC frontend_manager
+        PRIVATE ngraph::builder)
+
+add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME}
+        EXCLUDE_PATTERNS ${PROTO_SRCS} ${PROTO_HDRS})
+
+install(TARGETS ${TARGET_NAME} EXPORT ngraphTargets
         RUNTIME DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
         ARCHIVE DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph
         LIBRARY DESTINATION ${NGRAPH_INSTALL_LIB} COMPONENT ngraph)
 
-install(DIRECTORY ${TENSORFLOW_FRONTEND_INCLUDE_DIR}/tensorflow_frontend
-        DESTINATION ${TENSORFLOW_FRONTEND_INSTALL_INCLUDE}
-        COMPONENT ngraph
-        FILES_MATCHING
-        PATTERN "*.hpp"
-        PATTERN "*.h"
+install(DIRECTORY ${${TARGET_NAME}_INCLUDE_DIR}/tensorflow_frontend
+        DESTINATION ${FRONTEND_INSTALL_INCLUDE}
+        COMPONENT ngraph_dev
+        FILES_MATCHING PATTERN "*.hpp"
         )
 
-if (NGRAPH_EXPORT_TARGETS_ENABLE)
-    export(TARGETS tensorflow_frontend NAMESPACE ngraph:: APPEND FILE "${NGRAPH_TARGETS_FILE}")
-endif()
+export(TARGETS ${TARGET_NAME} NAMESPACE ngraph:: APPEND FILE "${NGRAPH_TARGETS_FILE}")
