--- a/inference-engine/tests_deprecated/functional/shared_tests/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/functional/shared_tests/CMakeLists.txt
@@ -6,6 +6,7 @@ set(TARGET_NAME IESharedTests)
 
 list(APPEND SHARED_LIBRARIES
         ngraph
+        ngraph::frontend_meneger
         commonTestUtils
         ngraphFunctions
         ieTestHelpers
