--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -128,10 +128,8 @@ jobs:
 
   - script: |
       set PATH=$(TEST_ENV_PATH)
-      "$(IB_TESTCONSOLE)" $(BIN_DIR)\InferenceEngineUnitTests.exe --gtest_output=xml:TEST-InferenceEngineUnitTests-IB.xml /mon=TEST-InferenceEngineUnitTests-IB.ib_mon
+      "$(IB_TESTCONSOLE)" $(BIN_DIR)\InferenceEngineUnitTests.exe --gtest_output=xml:TEST-InferenceEngineUnitTests-IB.xml
     displayName: 'IE UT old - IB'
-  - publish: TEST-InferenceEngineUnitTests-IB.ib_mon
-    artifact: TEST-InferenceEngineUnitTests-IB.ib_mon
 
   - script: |
       set PATH=$(TEST_ENV_PATH)
@@ -178,11 +176,11 @@ jobs:
   - script: |
       set PATH=$(TEST_ENV_PATH)
       rem $(BIN_DIR)\cpuFuncTests.exe --gtest_filter=*smoke* --gtest_output=xml:TEST-cpuFuncTests.xml
-      "$(IB_TESTCONSOLE)" $(BIN_DIR)\cpuFuncTests.exe --gtest_filter=*smoke*:-*CompareWithRefs/base_size=16_pre_nms_topn=100_post_nms_topn=100_nms_thresh=0.7_feat_stride=1_min_size=1_ratio*:*smoke_GRUSequenceCommonZeroClip/GRUSequenceTest.CompareWithRefs/mode=CONVERT_TO_TI_MAX_SEQ_LEN_CONST_seq_lengths* --gtest_output=xml:TEST-cpuFuncTests-IB.xml /testlevel=24
+      "$(IB_TESTCONSOLE)" $(BIN_DIR)\cpuFuncTests.exe --gtest_filter=*smoke*:-*smoke_GRUSequenceCommonZeroClip/GRUSequenceTest.CompareWithRefs/mode=CONVERT_TO_TI_MAX_SEQ_LEN_CONST_seq_lengths* --gtest_output=xml:TEST-cpuFuncTests-IB.xml /testlevel=24
     displayName: 'CPU FuncTests - IB'
     continueOnError: false
-  - publish: TEST-cpuFuncTests-IB.ib_mon
-    artifact: TEST-cpuFuncTests-IB.ib_mon
+  - publish: TEST-cpuFuncTests-IB.xml
+    artifact: TEST-cpuFuncTests-IB.xml
 
   - script: |
       set PATH=$(TEST_ENV_PATH)
