--- a/tests/stress_tests/common/CMakeLists.txt
+++ b/tests/stress_tests/common/CMakeLists.txt
@@ -27,11 +27,12 @@ if(EXISTS "${OpenVINO_SOURCE_DIR}/thirdparty/gflags")
     add_gflags()
 endif()
 
+add_subdirectory("${OpenVINO_SOURCE_DIR}/tests/lib" common)
 target_link_libraries(${TARGET_NAME}
     PUBLIC
         IE::gtest
         IE::pugixml
-        ${InferenceEngine_LIBRARIES}
         gflags
+        common
     PRIVATE
         IE::gtest_main)
