add title to build command

--- a/.ci/azure/windows.yml
+++ b/.ci/azure/windows.yml
@@ -98,7 +98,7 @@ jobs:
 
   - script: |
       set PATH=$(WORK_DIR)\ninja-win;%PATH%
-      call "$(MSVS_VARS_PATH)" && "C:\Program Files (x86)\IncrediBuild\BuildConsole.exe" /COMMAND="ninja"
+      call "$(MSVS_VARS_PATH)" && "C:\Program Files (x86)\IncrediBuild\BuildConsole.exe" /COMMAND="ninja" /TITLE="build ie"
     workingDirectory: $(BUILD_DIR)
     displayName: 'Build Win'
 
