Fixed static protobuf

--- a/ngraph/test/util/CMakeLists.txt
+++ b/ngraph/test/util/CMakeLists.txt
@@ -27,12 +27,8 @@ if(COMMAND ie_faster_build)
 endif()
 
 target_include_directories(ngraph_test_util PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/..
-    $<TARGET_PROPERTY:inference_engine,INTERFACE_INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:onnx,INTERFACE_INCLUDE_DIRECTORIES>
-    $<TARGET_PROPERTY:onnx_proto,INTERFACE_INCLUDE_DIRECTORIES>)
-target_compile_definitions(ngraph_test_util
-    PRIVATE $<TARGET_PROPERTY:onnx,INTERFACE_COMPILE_DEFINITIONS>)
+    $<TARGET_PROPERTY:inference_engine,INTERFACE_INCLUDE_DIRECTORIES>)
 target_link_libraries(ngraph_test_util PUBLIC ngraph ngraph_backend gtest gmock)
 if (NGRAPH_ONNX_IMPORT_ENABLE)
-    target_link_libraries(ngraph_test_util PRIVATE ${Protobuf_LIBRARIES} onnx_importer)
+    target_link_libraries(ngraph_test_util PRIVATE onnx_common onnx_importer)
 endif()
