--- a/ngraph/test/CMakeLists.txt
+++ b/ngraph/test/CMakeLists.txt
@@ -174,6 +174,7 @@ set(SRC
     type_prop/prior_box.cpp
     type_prop/proposal.cpp
     type_prop/psroi_pooling.cpp
+    type_prop/random_uniform.cpp
     type_prop/range.cpp
     type_prop/read_value.cpp
     type_prop/reduce_l1.cpp
@@ -449,6 +450,7 @@ set(MULTI_TEST_SRC
     backend/prior_box.in.cpp
     backend/proposal.in.cpp
     backend/psroi_pooling.in.cpp
+    backend/random_uniform.in.cpp
     backend/range.in.cpp
     backend/recurrent_cells.in.cpp
     backend/reduce_l1.in.cpp
