Try without LTO

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,9 +76,9 @@ function(build_ngraph)
         set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /wd4308 /wd4146 /wd4703 /wd4244 /wd4819")
     endif()
 
-    if(ENABLE_LTO)
-        set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
-    endif()
+    # if(ENABLE_LTO)
+    #     set(CMAKE_INTERPROCEDURAL_OPTIMIZATION_RELEASE ON)
+    # endif()
 
     ie_cpack_add_component(ngraph REQUIRED)
     ie_cpack_add_component(ngraph_dev REQUIRED DEPENDS ngraph)
