--- a/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
+++ b/cmake/templates/InferenceEngineDeveloperPackageConfig.cmake.in
@@ -73,7 +73,9 @@ if(NOT MSVC)
     ie_add_compiler_flags(-Wno-error=unused-variable)
     if(CMAKE_COMPILER_IS_GNUCXX)
         ie_add_compiler_flags(-Wno-error=unused-but-set-variable)
-        ie_add_compiler_flags(-Wno-error=suggest-override)
+        if(SUGGEST_OVERRIDE_SUPPORTED)
+            set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-suggest-override")
+        endif()
     endif()
 endif()
 
