--- a/ngraph/frontend/CMakeLists.txt
+++ b/ngraph/frontend/CMakeLists.txt
@@ -14,6 +14,7 @@ if(NOT WIN32)
         -DCMAKE_POSITION_INDEPENDENT_CODE:BOOL=${CMAKE_POSITION_INDEPENDENT_CODE}
         -DCMAKE_DEBUG_POSTFIX=${CMAKE_DEBUG_POSTFIX}
         -DCMAKE_RELEASE_POSTFIX=${CMAKE_RELEASE_POSTFIX}
+        -DCMAKE_POLICY_DEFAULT_CMP0063=${CMAKE_POLICY_DEFAULT_CMP0063}
     )
 
     if(CMAKE_TOOLCHAIN_FILE)
