Added inference_engine as a private dependency in all targets that depends on frontend_manager (trick to reuse NewExtension class in FEM, which is ngraph part, from IE)

--- a/ngraph/frontend/paddlepaddle/CMakeLists.txt
+++ b/ngraph/frontend/paddlepaddle/CMakeLists.txt
@@ -85,7 +85,7 @@ else()
 endif()
 
 target_link_libraries(${TARGET_NAME} PUBLIC frontend_manager
-                                     PRIVATE ngraph::builder)
+                                     PRIVATE ngraph::builder inference_engine)
 
 add_clang_format_target(${TARGET_NAME}_clang FOR_TARGETS ${TARGET_NAME}
                         EXCLUDE_PATTERNS ${PROTO_SRCS} ${PROTO_HDRS})
