Removed -Wsuggest-override ignore from sources

--- a/inference-engine/tests/unit/inference_engine/CMakeLists.txt
+++ b/inference-engine/tests/unit/inference_engine/CMakeLists.txt
@@ -26,4 +26,9 @@ addIeTargetTest(
             IE
 )
 
+if(SUGGEST_OVERRIDE_SUPPORTED)
+    set_source_files_properties(cpp_interfaces/ie_memory_state_internal_test.cpp
+                                COMPILE_OPTIONS -Wno-suggest-override)
+endif()
+
 link_system_libraries(${TARGET_NAME} PRIVATE unitTestUtils)
