--- a/inference-engine/tests_deprecated/unit/CMakeLists.txt
+++ b/inference-engine/tests_deprecated/unit/CMakeLists.txt
@@ -29,6 +29,13 @@ if (ENABLE_GNA)
     list(APPEND TEST_SRC ${GNA_TESTS})
     list(APPEND TEST_DEPS GNAPlugin_test_static)
 
+    if(SUGGEST_OVERRIDE_SUPPORTED)
+        set_source_files_properties(engines/gna/graph_tools/graph_copy_tests.cpp
+                                    engines/gna/graph_tools/graph_tools_test.cpp
+                                    engines/gna/gna_model_serial_test.cpp
+                                    COMPILE_OPTIONS -Wno-suggest-override)
+    endif()
+
     # TODO: fix GNA tests
     if(OFF)
         set(gna_stub "${CMAKE_CURRENT_SOURCE_DIR}/engines/gna/gna_api_stub.cpp")
@@ -54,6 +61,12 @@ endif()
 
 if (ENABLE_MYRIAD)
     include(${XLINK_DIR}/XLink.cmake)
+
+    if(SUGGEST_OVERRIDE_SUPPORTED)
+        set_source_files_properties(engines/vpu/myriad_tests/helpers/myriad_test_case.cpp
+                                    engines/vpu/mvnc/watchdog_tests.cpp
+                                    COMPILE_OPTIONS -Wno-suggest-override)
+    endif()
 
     file(GLOB
             VPU_TESTS
