--- a/ngraph/core/reference/CMakeLists.txt
+++ b/ngraph/core/reference/CMakeLists.txt
@@ -25,6 +25,10 @@ if(COMMAND ie_faster_build)
     )
 endif()
 
+if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
+    target_compile_options(${TARGET_NAME} PUBLIC /wd4146)
+endif()
+
 target_compile_definitions(${TARGET_NAME} PRIVATE XBYAK_NO_OP_NAMES XBYAK64)
 
 # Defines macro in C++ to load backend plugin
