--- a/tests/lib/src/CMakeLists.txt
+++ b/tests/lib/src/CMakeLists.txt
@@ -2,14 +2,14 @@
 # SPDX-License-Identifier: Apache-2.0
 #
 
-set (TARGET_NAME "shared_tests_lib")
+set (TARGET_NAME "tests_shared_lib")
 
 file (GLOB SRC *.cpp)
 add_library(${TARGET_NAME} STATIC ${SRC})
 
 target_include_directories(${TARGET_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
-#set(OpenVINO_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../")
+set(OpenVINO_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../../../")
 
 # Search OpenVINO Inference Engine via InferenceEngine_DIR
 find_package(IEDevScripts REQUIRED
