--- a/ngraph/python/tests/mock/mock_py_ngraph_frontend/CMakeLists.txt
+++ b/ngraph/python/tests/mock/mock_py_ngraph_frontend/CMakeLists.txt
@@ -16,6 +16,6 @@ add_library(${TARGET_FE_NAME} SHARED ${LIBRARY_SRC} ${LIBRARY_HEADERS})
 target_include_directories(${TARGET_FE_NAME} PRIVATE ".")
 
 target_link_libraries(${TARGET_FE_NAME} PRIVATE frontend_manager)
-target_link_libraries(${TARGET_FE_NAME} PUBLIC ngraph PRIVATE ngraph::builder)
+target_link_libraries(${TARGET_FE_NAME} PUBLIC ngraph)
 
 add_clang_format_target(${TARGET_FE_NAME}_clang FOR_TARGETS ${TARGET_FE_NAME})
