--- a/.ci/azure/linux.yml
+++ b/.ci/azure/linux.yml
@@ -209,9 +209,11 @@ jobs:
 
   - script: |
       . $(SETUPVARS) -pyver 3.6
-      cd $(REPO_DIR)/tests/layer_tests
+      export MO_ROOT="$INTEL_OPENVINO_DIR/deployment_tools/model_optimizer"
+      export PYTHONPATH="$INTEL_OPENVINO_DIR/deployment_tools/tests/layer_tests:$MO_ROOT:$PYTHONPATH"
       python3 -m pip install -r requirements.txt
       python3 -m pytest tensorflow_tests/test_tf_Roll.py --ir_version=10 --junitxml=TEST-tf_Roll.xml
+    workingDirectory: $(REPO_DIR)/tests/layer_tests
     displayName: 'Layer Tests'
     continueOnError: false
 
