--- a/ngraph/CMakeLists.txt
+++ b/ngraph/CMakeLists.txt
@@ -10,34 +10,14 @@ set(NGRAPH_INCLUDE_PATH
     ${CMAKE_CURRENT_SOURCE_DIR}/core/include
 )
 
-set(FRONTEND_INCLUDE_PATH
-    ${CMAKE_CURRENT_SOURCE_DIR}/frontend/frontend_manager/include
-)
-
-# Will be used by frontends to construct frontend-specific source location paths
-set(FRONTEND_BASE_PATH
-    ${CMAKE_CURRENT_SOURCE_DIR}/frontend
-)
-
 project (ngraph)
 
 #-----------------------------------------------------------------------------------------------
 # Installation logic...
 #-----------------------------------------------------------------------------------------------
 
-if (LINUX)
-    include(GNUInstallDirs)
-else()
-    set(CMAKE_INSTALL_BINDIR "bin" CACHE STRING "User executables (bin)")
-    set(CMAKE_INSTALL_LIBDIR "lib" CACHE STRING "Object code libraries (lib)")
-    set(CMAKE_INSTALL_INCLUDEDIR "include" CACHE STRING "C header files (include)")
-endif()
-
-# Destinations
-set(NGRAPH_INSTALL_LIB "deployment_tools/ngraph/${CMAKE_INSTALL_LIBDIR}")
-set(NGRAPH_INSTALL_INCLUDE "deployment_tools/ngraph/${CMAKE_INSTALL_INCLUDEDIR}")
-set(NGRAPH_INSTALL_BIN "deployment_tools/ngraph/${CMAKE_INSTALL_BINDIR}")
-
+set(NGRAPH_INSTALL_LIB "deployment_tools/ngraph/lib")
+set(NGRAPH_INSTALL_INCLUDE "deployment_tools/ngraph/include")
 set(NGRAPH_TARGETS_FILE "${CMAKE_CURRENT_BINARY_DIR}/ngraphTargets.cmake")
 
 add_definitions(-DPROJECT_ROOT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
@@ -45,10 +25,6 @@ add_definitions(-DPROJECT_ROOT_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 #-----------------------------------------------------------------------------------------------
 # External projects install directory
 #-----------------------------------------------------------------------------------------------
-
-if(NOT DEFINED EXTERNAL_PROJECTS_ROOT)
-    set(EXTERNAL_PROJECTS_ROOT ${CMAKE_CURRENT_BINARY_DIR})
-endif()
 
 add_subdirectory(core)
 
